--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
      "postinstall": "npm rebuild sqlite3 --build-from-source",
-  "test": "echo \"Error: no test specified\" && exit 1",
+  "test": "echo \"Error: no test specified\" && exit 1"
    
   },
   "keywords": [],
