--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vitronics_hub_ke_app",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-     "postinstall": "npm rebuild sqlite3 --build-from-source",
-  "test": "echo \"Error: no test specified\" && exit 1"
-   
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "preinstall": "npm install --build-from-source=sqlite3",
+    "postinstall": "npm rebuild sqlite3 --build-from-source --update-binary",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -30,5 +30,8 @@
     "path": "^0.12.7",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
+  },
+    "engines": {
+    "node": "18.x"
   }
 }
