--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "preinstall": "npm rebuild sqlite3 --build-from-source",
-     "postinstall": "npm rebuild sqlite3 --build-from-source",
+    "postinstall": "npm rebuild sqlite3 --build-from-source",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^12.2.0",
     "body-parser": "^2.2.0",
     "connect-sqlite3": "^0.9.16",
     "cookie-parser": "^1.4.7",
@@ -28,10 +29,9 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "path": "^0.12.7",
-    "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sequelize": "^6.37.7"
   },
-    "engines": {
+  "engines": {
     "node": "18.x"
   }
 }
