--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "preinstall": "npm rebuild sqlite3 --build-from-source",
-    "postinstall": "npm rebuild sqlite3 --build-from-source",
+    "preinstall": "npm install --build-from-source=sqlite3",
+    "postinstall": "npm rebuild sqlite3 --build-from-source --update-binary",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,7 +16,6 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-    "better-sqlite3": "^12.2.0",
     "body-parser": "^2.2.0",
     "connect-sqlite3": "^0.9.16",
     "cookie-parser": "^1.4.7",
@@ -29,9 +28,10 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "path": "^0.12.7",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
-  "engines": {
+    "engines": {
     "node": "18.x"
   }
 }
