--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vitronics_hub_ke_app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "preinstall": "npm install --build-from-source=sqlite3",
     "postinstall": "npm rebuild sqlite3 --build-from-source --update-binary",
     "test": "echo \"Error: no test specified\" && exit 1"
